--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Today's Date</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+<body>
+
 <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
 
 <main>
@@ -30,7 +42,8 @@
     </g>
 </svg>
 
-  <p>National Foundation Day</p>  
+  <p id="holiday"><a href="https://en.wikipedia.org/wiki/National_Foundation_Day">National Foundation Day</a></p>
+  <p id="date">February 11</p>
     </div>
 
     <input type="text" />
@@ -39,4 +52,7 @@
       <button>I'm Feeling Lucky</button>
     </div>
   
-</main>
+</main>  
+    
+</body>
+</html>
