--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-US">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Google Doodle</title>
-
-
-    <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-
+<link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="js/scripts.js">
 
 <main>
   
@@ -54,7 +42,4 @@
       <button>I'm Feeling Lucky</button>
     </div>
   
-</main>  
-    
-</body>
-</html>
+</main>
